--- a/app/templates/grocery/order.html
+++ b/app/templates/grocery/order.html
@@ -376,12 +376,7 @@ endblock %} {% block content %}
           {% endif %}
         </div>
         <div class="card-footer">
-          <a
-            href="{{ url_for('main.index') }}"
-            class="btn btn-outline-secondary"
-          >
-            <i class="fas fa-arrow-left me-2"></i>Back to Dashboard
-          </a>
+          <!-- Back to Dashboard link removed as requested -->
         </div>
       </div>
     </div>
