--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -78,35 +78,15 @@
             </li>
           </ul>
           <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                data-bs-auto-close="true"
-                aria-expanded="false"
-                aria-haspopup="true"
-              >
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.profile') }}">
                 <i class="fas fa-user me-1"></i>{{ current_user.username }}
               </a>
-              <ul
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="navbarDropdown"
-              >
-                <li>
-                  <a class="dropdown-item" href="{{ url_for('auth.profile') }}">
-                    <i class="fas fa-user-cog me-2"></i>Profile
-                  </a>
-                </li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
-                    <i class="fas fa-sign-out-alt me-2"></i>Logout
-                  </a>
-                </li>
-              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('auth.logout') }}">
+                <i class="fas fa-sign-out-alt me-1"></i>Logout
+              </a>
             </li>
           </ul>
           {% else %}
